--- a/1 copy.ipynb
+++ b/1 copy.ipynb
@@ -46,7 +46,16 @@
    "execution_count": 2,
    "id": "161451ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wbc/code3/llm-spectro-agent/src/utils.py:572: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  plt.plot(ctx.spectrum['new_wavelength'], sigma_smooth, alpha=0.7, label=f'$\\sigma={sigma}$')\n"
+     ]
+    }
+   ],
    "source": [
     "from src.context_manager import SpectroContext\n",
     "from langchain_openai import ChatOpenAI\n",
