--- a/1 copy.ipynb
+++ b/1 copy.ipynb
@@ -46,16 +46,7 @@
    "execution_count": 2,
    "id": "161451ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wbc/code3/llm-spectro-agent/src/utils.py:572: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  plt.plot(ctx.spectrum['new_wavelength'], sigma_smooth, alpha=0.7, label=f'$\\sigma={sigma}$')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.context_manager import SpectroContext\n",
     "from langchain_openai import ChatOpenAI\n",
@@ -252,23 +243,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DEBUG] Axis detection result: ```json\n",
-      "{\n",
-      "  \"x_axis\": {\n",
-      "    \"label and Unit\": \"Wavelength [Angstrom]\",\n",
-      "    \"tick_range\": {\"min\": 4000, \"max\": 10000},\n",
-      "    \"ticks\": [4000, 5000, 6000, 7000, 8000, 9000, 10000]\n",
-      "  },\n",
-      "  \"y_axis\": {\n",
-      "    \"label and Unit\": \"Flux [1e-17 erg/cm2/Angstrom]\",\n",
-      "    \"tick_range\": {\"min\": -2, \"max\": 12},\n",
-      "    \"ticks\": [-2, 0, 2, 4, 6, 8, 10, 12]\n",
-      "  }\n",
-      "}\n",
-      "```\n"
+     "ename": "NotImplementedError",
+     "evalue": "Unsupported message type: <class 'list'>\nFor troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/MESSAGE_COERCION_FAILURE ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      3\u001b[39m interpreter = SpectralVisualInterpreter(\n\u001b[32m      4\u001b[39m     vis_llm=vis_llm,\n\u001b[32m      5\u001b[39m     main_llm=llm,\n\u001b[32m      6\u001b[39m     ctx=ctx\n\u001b[32m      7\u001b[39m )\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# 异步执行视觉分析\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m a = \u001b[38;5;28;01mawait\u001b[39;00m interpreter.detect_axis_ticks(image_path)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 48\u001b[39m, in \u001b[36mSpectralVisualInterpreter.detect_axis_ticks\u001b[39m\u001b[34m(self, image_path)\u001b[39m\n\u001b[32m     28\u001b[39m         prompt = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     29\u001b[39m \u001b[33m你是一个专业的视觉分析模型，擅长从科学图表中提取坐标轴刻度信息。\u001b[39m\n\u001b[32m     30\u001b[39m \u001b[33m如果输入中不包含图像，请输出 “未输入图像”\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     45\u001b[39m \u001b[33m}\u001b[39m\n\u001b[32m     46\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     47\u001b[39m         message = user_query(prompt, image_path)\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m         response = \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.vis_llm.ainvoke([message])\n\u001b[32m     49\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m[DEBUG] Axis detection result:\u001b[39m\u001b[33m\"\u001b[39m, response.content)\n\u001b[32m     50\u001b[39m         \u001b[38;5;28mself\u001b[39m.ctx.set(\u001b[33m\"\u001b[39m\u001b[33maxis_info\u001b[39m\u001b[33m\"\u001b[39m, response.content)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Apps/anaconda3/envs/langchain/lib/python3.12/site-packages/langchain_core/language_models/chat_models.py:418\u001b[39m, in \u001b[36mBaseChatModel.ainvoke\u001b[39m\u001b[34m(self, input, config, stop, **kwargs)\u001b[39m\n\u001b[32m    407\u001b[39m \u001b[38;5;129m@override\u001b[39m\n\u001b[32m    408\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mainvoke\u001b[39m(\n\u001b[32m    409\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    414\u001b[39m     **kwargs: Any,\n\u001b[32m    415\u001b[39m ) -> BaseMessage:\n\u001b[32m    416\u001b[39m     config = ensure_config(config)\n\u001b[32m    417\u001b[39m     llm_result = \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.agenerate_prompt(\n\u001b[32m--> \u001b[39m\u001b[32m418\u001b[39m         [\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_convert_input\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m)\u001b[49m],\n\u001b[32m    419\u001b[39m         stop=stop,\n\u001b[32m    420\u001b[39m         callbacks=config.get(\u001b[33m\"\u001b[39m\u001b[33mcallbacks\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    421\u001b[39m         tags=config.get(\u001b[33m\"\u001b[39m\u001b[33mtags\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    422\u001b[39m         metadata=config.get(\u001b[33m\"\u001b[39m\u001b[33mmetadata\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    423\u001b[39m         run_name=config.get(\u001b[33m\"\u001b[39m\u001b[33mrun_name\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m    424\u001b[39m         run_id=config.pop(\u001b[33m\"\u001b[39m\u001b[33mrun_id\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m),\n\u001b[32m    425\u001b[39m         **kwargs,\n\u001b[32m    426\u001b[39m     )\n\u001b[32m    427\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m cast(\u001b[33m\"\u001b[39m\u001b[33mChatGeneration\u001b[39m\u001b[33m\"\u001b[39m, llm_result.generations[\u001b[32m0\u001b[39m][\u001b[32m0\u001b[39m]).message\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Apps/anaconda3/envs/langchain/lib/python3.12/site-packages/langchain_core/language_models/chat_models.py:376\u001b[39m, in \u001b[36mBaseChatModel._convert_input\u001b[39m\u001b[34m(self, model_input)\u001b[39m\n\u001b[32m    374\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m StringPromptValue(text=model_input)\n\u001b[32m    375\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(model_input, Sequence):\n\u001b[32m--> \u001b[39m\u001b[32m376\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m ChatPromptValue(messages=\u001b[43mconvert_to_messages\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_input\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    377\u001b[39m msg = (\n\u001b[32m    378\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mInvalid input type \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(model_input)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    379\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mMust be a PromptValue, str, or list of BaseMessages.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    380\u001b[39m )\n\u001b[32m    381\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(msg)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Apps/anaconda3/envs/langchain/lib/python3.12/site-packages/langchain_core/messages/utils.py:373\u001b[39m, in \u001b[36mconvert_to_messages\u001b[39m\u001b[34m(messages)\u001b[39m\n\u001b[32m    371\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(messages, PromptValue):\n\u001b[32m    372\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m messages.to_messages()\n\u001b[32m--> \u001b[39m\u001b[32m373\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m [\u001b[43m_convert_to_message\u001b[49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m messages]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Apps/anaconda3/envs/langchain/lib/python3.12/site-packages/langchain_core/messages/utils.py:352\u001b[39m, in \u001b[36m_convert_to_message\u001b[39m\u001b[34m(message)\u001b[39m\n\u001b[32m    350\u001b[39m     msg = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnsupported message type: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(message)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    351\u001b[39m     msg = create_message(message=msg, error_code=ErrorCode.MESSAGE_COERCION_FAILURE)\n\u001b[32m--> \u001b[39m\u001b[32m352\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(msg)\n\u001b[32m    354\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m message_\n",
+      "\u001b[31mNotImplementedError\u001b[39m: Unsupported message type: <class 'list'>\nFor troubleshooting, visit: https://python.langchain.com/docs/troubleshooting/errors/MESSAGE_COERCION_FAILURE "
      ]
     }
    ],
@@ -1988,7 +1975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
