new file:   data/LRG/input/035.png 	new file:   data/LRG/output/035_continuum.png 	new file:   data/LRG/output/035_cropped.png 	new file:   data/LRG/output/035_features.png 	new file:   data/LRG/output/035_spec_extract.png 	new file:   data/LRG/output/035_spectrum.png 	new file:   data/LRG/output/035_visual_interpretation.txt 	new file:   data/test_set_2/A/output2/002_continuum.png 	new file:   data/test_set_2/A/output2/002_cropped.png 	new file:   data/test_set_2/A/output2/002_features.png 	new file:   data/test_set_2/A/output2/002_rule_analysis.md 	new file:   data/test_set_2/A/output2/002_spec_extract.png 	new file:   data/test_set_2/A/output2/002_spectrum.png 	new file:   data/test_set_2/A/output2/002_summary.md 	new file:   data/test_set_2/A/output2/002_visual_interpretation.txt 	new file:   data/test_set_2/B/output2/001_continuum.png 	new file:   data/test_set_2/B/output2/001_cropped.png 	new file:   data/test_set_2/B/output2/001_features.png 	new file:   data/test_set_2/B/output2/001_rule_analysis.md 	new file:   data/test_set_2/B/output2/001_spec_extract.png 	new file:   data/test_set_2/B/output2/001_spectrum.png 	new file:   data/test_set_2/B/output2/001_summary.md 	new file:   data/test_set_2/B/output2/001_visual_interpretation.txt 	new file:   data/test_set_2/B/output2/005_continuum.png 	new file:   data/test_set_2/B/output2/005_cropped.png 	new file:   data/test_set_2/B/output2/005_features.png 	new file:   data/test_set_2/B/output2/005_rule_analysis.md 	new file:   data/test_set_2/B/output2/005_spec_extract.png 	new file:   data/test_set_2/B/output2/005_spectrum.png 	new file:   data/test_set_2/B/output2/005_summary.md 	new file:   data/test_set_2/B/output2/005_visual_interpretation.txt 	new file:   data/test_set_2/B/output2/007_continuum.png 	new file:   data/test_set_2/B/output2/007_cropped.png 	new file:   data/test_set_2/B/output2/007_features.png 	new file:   data/test_set_2/B/output2/007_spec_extract.png 	new file:   data/test_set_2/B/output2/007_

--- a/debug2.ipynb
+++ b/debug2.ipynb
@@ -45,7 +45,9 @@
    "id": "3c0d64f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "4390"
+   ]
   },
   {
    "cell_type": "code",
@@ -403,8 +405,8 @@
     "你是科学图表阅读助手，专门负责检查和修正刻度值与像素映射关系。\n",
     "\n",
     "规则：\n",
-    "- y 轴: 刻度值从小到大时 position_y 应严格递减\n",
-    "- x 轴: 刻度值从小到大时 position_x 应严格递增\n",
+    "- y 轴: 刻度值从小到大时 position_y 应严格递减，即如果 value_y1 < value_y2，则 position_y1 > position_y2\n",
+    "- x 轴: 刻度值从小到大时 position_x 应严格递增，即如果 value_x1 < value_x2，则 position_x1 < position_x2\n",
     "- 允许存在 null 值\n",
     "\n",
     "输出要求：\n",
