--- a/read.ipynb
+++ b/read.ipynb
@@ -1017,7 +1017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CESS",
+   "display_name": "langchain",
    "language": "python",
    "name": "python3"
   },
@@ -1031,7 +1031,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
